fix: overflowを修正

--- a/frontend/src/style/timetableBlock.scss
+++ b/frontend/src/style/timetableBlock.scss
@@ -6,6 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 0.6rem;
 
   &.empty {
     border: 2px solid #333;
