--- a/frontend/src/style/userInfo.scss
+++ b/frontend/src/style/userInfo.scss
@@ -7,21 +7,22 @@
   padding: 0.5rem;
 
   .user-info-container {
+    width: 100%;
     display: flex;
     align-items: center;
   }
 
   .profile-image {
     margin-left: 0.5rem;
-    height: 4rem;
-    width: 4rem;
-    border-radius: 9999px;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
     background-color: #4b4b4b;
   }
 
   .info-section {
     flex: 1;
-    padding: 0 1rem;
+    padding: 0 2%;
 
     .label {
       color: #6b7280;
@@ -29,7 +30,7 @@
   }
 
   .year-section {
-    padding: 0 2rem;
+    padding: 0 2%;
   }
 
   .divider {
